/**
 * Copyright Â© 2025 Chee Bin HOH. All rights reserved.
 */

syntax = "proto3";

package dmn;

enum DMesgTypePb
{
  INVALID = 0;
  sys     = 1;

  /* Application specific message type is started at 5
   * or after, so that we have gap to add more library
   * specific message type before 5.
   */

  message = 5;
}
