/**
 * Copyright Â© 2025 Chee Bin HOH. All rights reserved.
 */

syntax = "proto3";

import "google/protobuf/timestamp.proto";

package dmn;

enum DMesgStatePb
{
  Invalid       = 0;
  Initialized   = 1;
  MasterPending = 2;
  Ready         = 3;

  /* All state transition systems has a single beginning point
   * and a single terminating point, a gap is purposely
   * inserted that so a end of live software can always assert
   * that no system state from another peer can exceed the
   * Destroyed point, even if it does not receive a software
   * update
   */

  Destroyed     = 15;
}

message DMesgSysNodePb
{
  google.protobuf.Timestamp initializedTimestamp = 1;
  google.protobuf.Timestamp updatedTimestamp     = 2;
  string                    identifier           = 3;
  DMesgStatePb              state                = 4;
  string                    masterIdentifier     = 5;
}

message DMesgSysPb
{
  google.protobuf.Timestamp timestamp  = 1;
  DMesgSysNodePb            self       = 2;
  repeated DMesgSysNodePb   nodeList   = 5;
}

message DMesgBodyPb
{
  oneof Body
  {
    DMesgSysPb sys     = 1;

    /* Application specific data is started at 5
     * or after, so that we have gap to add more library
     * specific data before 5.
     */

    string     message = 5;
  }
}

